--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,8 @@ body {
     display: flex;
     margin: 0;
     height: 100%;
+    font-family: Georgia, Times, 'Times New Roman', serif;
+ 
 }
 
 .container {
